--- a/tests/test_cases/2021/commands/7E0.7E8.221169.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221169.yaml
@@ -4,11 +4,11 @@ test_cases:
     VOLKSWAGEN_PQ35_FUEL_P_HIGH: 1700
   response: '7E8056211690011'
 - expected_values:
-    VOLKSWAGEN_PQ35_FUEL_P_HIGH: 818900
-  response: 7E8056211691FFD
-- expected_values:
     VOLKSWAGEN_PQ35_FUEL_P_HIGH: 1254400
   response: '7E8056211693100'
+- expected_values:
+    VOLKSWAGEN_PQ35_FUEL_P_HIGH: 1356600
+  response: 7E80562116934FE
 - expected_values:
     VOLKSWAGEN_PQ35_FUEL_P_HIGH: 1663000
   response: 7E80562116940F6
