--- a/tests/test_cases/2021/commands/7E1.7E9.221018.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221018.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_DRIVING_STRATEGY_MOUNTAIN_FACTOR: 34.11765
   response: '7E90462101857'
+- expected_values:
+    VOLKSWAGEN_PQ35_DRIVING_STRATEGY_MOUNTAIN_FACTOR: 75.68627
+  response: 7E904621018C1
