--- a/tests/test_cases/2021/commands/7E1.7E9.221057.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221057.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_0_POS: 2.45
   response: 7E905621057F500
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_0_POS: 2.46
+  response: 7E905621057F600
